@@ -585,6 +585,9 @@ Release 2.4.0 - UNRELEASED
     HDFS-5748. Too much information shown in the dfs health page.
     (Haohui Mai via brandonli)
 
+    HDFS-5806. balancer should set SoTimeout to avoid indefinite hangs.
+    (Nathan Roberts via Andrew Wang).
+
   BREAKDOWN OF HDFS-2832 SUBTASKS AND RELATED JIRAS
 
     HDFS-4985. Add storage type to the protocol and expose it in block report
